# Sentinel_v2.1

./: .gitignore  DATA_PROCESSING_EXAMPLES.md  DATA_PROCESSING_GUIDE.md  IMPROVEMENTS_SUMMARY.md  INSTALLATION_CHECKLIST.md  INTEGRATION_EXAMPLES.md  PATTERN_DETECTION_GUIDE.md  PATTERN_EXAMPLES.md  README.md  VISUALIZATION_IMPROVEMENTS.md  dashboard.py  pyproject.toml  requirements.txt  test_imports.py
src/: __init__.py  backtest.py  broker.py  data_fetcher.py  data_processing.py  macro_analysis.py  mini_platform.py  notifier.py  oracle.py  pattern_recognition.py  risk_management.py  styles.py  utils.py  visualizations.py
views/: __init__.py  tab_correlaciones.py  tab_journal.py  tab_macro.py  tab_market_lab.py  tab_oracle.py  tab_paper_audit.py  tab_patrones.py  tab_plantillas.py  tab_playbooks.py  tab_premarket.py  tab_risk_gates.py  tab_tear_sheet.py  tab_tecnico.py  tab_volatilidad.py
